Modification to service file

--- a/berangere@.service
+++ b/berangere@.service
@@ -4,9 +4,9 @@ After=network.target
 
 [Service]
 Type=simple
-User=$USER
-Group=$GROUP
 EnvironmentFile=/etc/berangere/berangere.env
+User=${USER}
+Group=${GROUP}
 WorkingDirectory=/etc/berangere/
 ExecStart=/usr/bin/python3 berangere.py -k %i
 RestartSec=10s
