remove env file

--- a/berangere@.service
+++ b/berangere@.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 Type=simple
 EnvironmentFile=/etc/berangere/berangere.env
-User=${USER}
-Group=${GROUP}
+User=root
+Group=root
 WorkingDirectory=/etc/berangere/
 ExecStart=/usr/bin/python3 berangere.py -k %i
 RestartSec=10s
