--- a/config.json.example
+++ b/config.json.example
@@ -5,5 +5,6 @@
     "authorized_channel_names":["example_channel" ],
     "sounds_base_dir":"./sounds",
     "command_prefix":"0",
-    "separator":" | "
+    "separator":" | ",
+    "aggressive": false
 }
